fixed queue call to action overlap

--- a/main/resources/style/css/bootstrap.scss
+++ b/main/resources/style/css/bootstrap.scss
@@ -774,6 +774,7 @@ body {
 
 .mt-queue-call-to-action {
   padding: (2rem/14);
+  background-color: $darkerColor;
 }
 
 .mt-queue-call-button {
